--- a/shixun02/src/main/resources/application.properties
+++ b/shixun02/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=root
-spring.datasource.password=sdsj.2020616
+spring.datasource.password=learn2usemysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/project1?serverTimezone=Asia/Shanghai
 
