--- a/shixun02/src/main/resources/application.properties
+++ b/shixun02/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.username=root
-spring.datasource.password=learn2usemysql
+spring.datasource.password=qiukezhenaics1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/project1?serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/cquproject?serverTimezone=Asia/Shanghai
 
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource					
 spring.datasource.dbcp2.max-wait-millis=10000
